refactor: refactor use of lambda functions